implement user self service api for user detail information #3723 | remove unused sechub-web-server module